--- a/QLPhongMachTuWPF/View/LoginModel.xaml
+++ b/QLPhongMachTuWPF/View/LoginModel.xaml
@@ -127,6 +127,7 @@
                                 BorderBrush="Transparent"
                                 BorderThickness="0"
                                 PasswordChanged="txtPass_TextChanged"
+                                KeyDown="PasswordBox_KeyDown"
                           >
                             <i:Interaction.Triggers >
                                 <i:EventTrigger EventName="PasswordChanged">
