--- a/QLPhongMachTuWPF/ResourceXAML/UserControlStyles.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/UserControlStyles.xaml
@@ -185,36 +185,38 @@
 
     <Style x:Key="gridRemoveBtn" TargetType="Button">
         <Setter Property="Background" Value="Transparent"/>
-
-        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <!-- Thay đổi con trỏ khi rê chuột -->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" CornerRadius="5" Padding="5" BorderThickness="0" BorderBrush="{TemplateBinding BorderBrush}">
+                    <Border x:Name="ButtonBorder" 
+                    Background="{TemplateBinding Background}" 
+                    CornerRadius="5" 
+                    Padding="5" 
+                    BorderThickness="0" 
+                    BorderBrush="{TemplateBinding BorderBrush}">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+                    <ControlTemplate.Triggers>
+                        <!-- Hover trạng thái -->
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="ButtonBorder" Property="Background" Value="#D3D3D3"/>
+                            <!-- Màu nền khi hover -->
+                            <Setter TargetName="ButtonBorder" Property="BorderBrush" Value="#A9A9A9"/>
+                            <!-- Đường viền khi hover -->
+                        </Trigger>
 
-    </Style>
-
-    <Style x:Key="CenteredDataGridCellStyle" TargetType="DataGridCell">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-        <Setter Property="Padding" Value="10,0"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type DataGridCell}">
-                    <Border Background="{TemplateBinding Background}" BorderThickness="0,0,0,1" BorderBrush="Black">
-                        <ContentPresenter 
-     HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
-     VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                    </Border>
+                        <!-- Pressed trạng thái -->
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="ButtonBorder" Property="Background" Value="#B0B0B0"/>
+                            <!-- Màu nền khi nhấn -->
+                            <Setter TargetName="ButtonBorder" Property="BorderBrush" Value="#808080"/>
+                            <!-- Đường viền khi nhấn -->
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
