--- a/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/MainResource.xaml
@@ -21,5 +21,6 @@
     <viewmodel:ModifyStaffVM x:Key="ModifyStaffVM"></viewmodel:ModifyStaffVM>
     <viewmodel:ModifyMedicineVM x:Key="ModifyMedicineVM"></viewmodel:ModifyMedicineVM>
     <viewmodel:ManageAppointmentsVM x:Key="ManageAppointmentsVM"></viewmodel:ManageAppointmentsVM>
+    <viewmodel:AddAppointmentVM x:Key="AddAppointmentVM"></viewmodel:AddAppointmentVM>
 </ResourceDictionary> 
     
