update livechart and login button

--- a/QLPhongMachTuWPF/View/LoginModel.xaml
+++ b/QLPhongMachTuWPF/View/LoginModel.xaml
@@ -147,7 +147,8 @@
                     CommandParameter="{Binding ElementName=FormLogin}"
                     Style="{StaticResource MaterialDesignRaisedButton}"
                     Width="170"
-                    ToolTip="Resource name: MaterialDesignRaisedButton" Click="Button_Click"
+                   Click="Button_Click"
+                        IsDefault="True"
                         Foreground="White">
                     LOG IN
                 </Button>
